# chora-io

./: .gitignore  CNAME  README.md  index.html  styles.css  wasm.js  wasm_bg.wasm
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST.md  SECURITY.md
client/: Cargo.toml
client/src/: app.rs
client/src/components/: footer.rs  header.rs
client/src/routes/: home.rs  mod.rs
content/home/: index.md
scripts/: build_dev.sh  build_pro.sh  deploy.sh
